# job-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-search.yml
applier/: db.py  export.py  main.py  parse.py  query_library.py  server.py
applier/search/: adecco.py  aeroemploi.py  apec.py  base.py  cadremploi.py  francetravail.py  hays.py  hellowork.py  indeed_fr.py  jobetudiant.py  jobijoba.py  keljob.py  linkedin.py  malt.py  manpower.py  meteojob.py  michaelpage.py  monster_fr.py  optioncarriere.py  randstad.py  remoteok.py  side.py  staffme.py  synergie.py  wttj.py
profiles/: all-jobs.toml  digital-marketing.toml  hamza.toml
results/: jobs.json
watchlist/: companies.toml
