[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "applier"
version = "0.1.0"
description = "Job search CLI — finds and lists job URLs across platforms"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13",
    "openpyxl>=3.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pdfplumber>=0.11",
    "playwright>=1.61.0",
]

[project.scripts]
applier = "applier.main:app"

[tool.hatch.build.targets.wheel]
packages = ["applier"]
